# llm-ops-agent

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
app/: README.md  agent.py  agent_router.py  auth.py  chat_agent.py  chat_memory.py  config.py  fmp_agent.py  graph.py  graph_orchestrator.py  k8s_agent.py  llm.py  main.py  memory.py  pyproject.toml  rag.py  rag_agent.py  weaviate_utils.py
app/agents/: finance_agent.py  fmp_agent.py  k8s_agent.py  planner_agent.py  rag_agent.py  reasoner_agent.py
app/langgraph_nodes/: datetime_node.py  memory_node.py  planner_node.py  rag_node.py  reasoner_node.py
app/src/: config.py  llm.py
app/src/agents/: __init__.py  agent_base.py  base_agent.py  finance_agent.py  greeting_agent.py  k8s_agent.py  llm_agent.py  memory_agent.py  planner_agent.py  reasoner_agent.py  retrieval_agent.py
app/src/api/: server.py
app/src/graph/: graph_builder.py
app/src/integrations/: __init__.py  mcp_client.py  redis_client.py  weaviate_client.py  weaviate_schema.py
app/src/integrations/tools/: __init__.py  datetime_tool.py  k8s_tool.py  market_data_tool.py  memory_tool.py  vector_search_tool.py
app/tools/: datetime_tool.py  datetime_tools.py  fmp_tools.py  openshift_tools.py  vector_utils.py  weaviate_v4.py
demo-docs/: boo_core_outage_aug14_2024_logs.txt  boo_security_incident_may23_2025_logs.txt
mcp-fmp/: Dockerfile  main.py  requirements.txt
mcp-openshift/: Dockerfile  auth.py  main.py  openshift_client.py  requirements.txt
scripts/: ensure_schema.py
ui/: Dockerfile  app.py  client.py  requirements.txt  sidebar.py
ui/pages/: 1_chat.py  2_upload.py
