[project]
name = "multi-agent-ai-bot"
version = "0.1.0"
description = "LangGraph multi-agent chatbot (MCP, RAG, memory)."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11" # This stays as it's a project-level setting

[tool.poetry]
name = "multi-agent-ai-bot"
packages = [
    { include = "src" },
]

# ───────────────────────── Runtime dependencies ─────────────────────────
[tool.poetry.dependencies]
python = ">=3.11"
langchain = ">=0.2.1"
langchain-community = ">=0.2.1"
langchain-aws = ">=0.1.7"
langchain-openai = ">=0.1.0"
weaviate-client = ">=3.26.7,<4.0.0"   # v3 pinned (SDK-v4 breaking changes)
redis = ">=5.0.0"
fastapi = ">=0.110.0"
"uvicorn[standard]" = ">=0.27.0"
"python-multipart" = "*" # Added this line for form data parsing
python-dotenv = ">=1.0.1"
pydantic = ">=2,<3"
pydantic-settings = ">=2.1"
httpx = ">=0.27.0"
"typer[all]" = ">=0.9.0"
kubernetes = ">=26.1.0"
isodate = ">=0.6.1"

# ───────────────────────── Dev / CI extras ─────────────────────────
[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.5"
ruff = ">=0.2.2"
mypy = ">=1.8.0"
types-redis = ">=4.6.0.20240125"
types-requests = ">=2.31.0.20240125"
rich = ">=13.7.0"
icecream = ">=2.1.3"
streamlit = ">=1.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"] # Ensure poetry-core version is compatible
build-backend = "poetry.core.masonry.api"

# ────────────────────────── Ruff formatting ──────────────────────────
[tool.ruff]
line-length = 99
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",   # pydocstyle
    "E501", # Line too long (handled by formatter)
    "ANN",  # flake8-annotations
    "TD",   # flake8-todo
    "FIX",  # flake8-fixme
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-exception
    "INP",  # flake8-no-implicit-concat
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "FBT",  # flake8-boolean-trap
    "C90",  # mccabe complexity
    "RET",  # flake8-return
    "COM800", # Missing comma
]

[tool.ruff.lint.per-file-ignores]
"src/api/server.py" = ["F401", "RUF012"]
"src/integrations/weaviate_schema.py" = ["S101", "S105", "B008"]
"src/integrations/mcp_client.py" = ["S105"]
"src/integrations/llm.py" = ["S603"]
"src/integrations/redis_client.py" = ["S101"]
"src/config.py" = ["S603"]
"src/graph/graph_builder.py" = ["B008", "BLE001"]
"**/{test_*,_test_*,conftest}.py" = [
    "S101",   # assert (use with pytest)
    "F811",   # redefinition (test fixtures)
    "RUF001", # Missing needed import (mypy)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ────────────────────────── Mypy type checking ──────────────────────────
[tool.mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
warn_unreachable = true
allow_incomplete_defs = true
